--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.34.3",
     "next": "16.1.6",
     "react": "19.2.3",
